--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "app that uses node, express, and mongoDB",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
