--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/marina-russ/natours#readme",
   "dependencies": {
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "morgan": "^1.10.0"
   }
