--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,11 +4,12 @@
   "rules": {
     "prettier/prettier": "error",
     "spaced-comment": "off",
-    "no-console": "warn",
+    "no-console": "off",
     "consistent-return": "off",
     "func-names": "off",
     "object-shorthand": "off",
     "no-process-exit": "off",
+    "endOfLine": "auto",
     "no-param-reassign": "off",
     "no-return-await": "off",
     "no-underscore-dangle": "off",
