--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "mongoose": "^7.3.1",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
