--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "mongoose": "^7.3.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "eslint": "^8.43.0",
