--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon server.js",
-    "start:prod": "NODE_ENV=production nodemon server.js",
+    "start:prod": "SET NODE_ENV=production&& nodemon server.js",
     "debug": "ndb server.js"
   },
   "repository": {
@@ -27,6 +27,7 @@
     "validator": "^13.9.0"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "eslint": "^8.43.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.8.0",
