--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,14 +2,19 @@
   "extends": ["airbnb", "prettier", "plugin:node/recommended"],
   "plugins": ["prettier"],
   "rules": {
-    "prettier/prettier": "error",
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ],
     "spaced-comment": "off",
     "no-console": "off",
     "consistent-return": "off",
     "func-names": "off",
     "object-shorthand": "off",
     "no-process-exit": "off",
-    "endOfLine": "1",
+    "endOfLine": 0,
     // 0 = off, 1 = warn, 2 = error
     "no-param-reassign": "off",
     "no-return-await": "off",
