--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "express": "^4.18.2",
     "mongoose": "^7.3.1",
     "morgan": "^1.10.0",
-    "slugify": "^1.6.6",
-    "validator": "^13.9.0"
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
