adds 'arrow-body-style': 'off' to linting rules

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
         "endOfLine": "auto"
       }
     ],
+    "arrow-body-style": "off",
     "spaced-comment": "off",
     "no-console": "off",
     "consistent-return": "off",
