installs axios and cookie-parser for HTTP login requests

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/marina-russ/natours#readme",
   "dependencies": {
+    "axios": "^1.5.0",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
