--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "nodemon server.js",
     "start:prod": "SET NODE_ENV=production&& nodemon server.js",
-    "debug": "ndb server.js"
+    "debug": "ndb server.js",
+    "watch:js": "esbuild ./public/js/index.js --bundle --outfile=./public/js/bundle.js --watch",
+    "build": "esbuild ./public/js/index.js --bundle --outfile=./public/js/bundle.js"
   },
   "repository": {
     "type": "git",
@@ -23,16 +25,19 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.1.4",
+    "esbuild": "0.19.3",
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^6.9.0",
     "helmet": "^7.0.0",
     "hpp": "^0.2.3",
+    "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.1",
     "mongoose-unique-validator": "^4.0.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.4",
+    "nodemailer-brevo-transport": "^2.0.1",
     "pug": "^3.0.2",
     "slugify": "^1.6.6",
     "validator": "^13.9.0",
