--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "mongoose": "^7.3.1",
     "mongoose-unique-validator": "^4.0.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
     "nodemailer-brevo-transport": "^2.0.1",
     "pug": "^3.0.2",
+    "sharp": "^0.32.6",
     "slugify": "^1.6.6",
     "validator": "^13.9.0",
     "xss-clean": "^0.1.4"
