--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^6.9.0",
     "helmet": "^7.0.0",
+    "helmet-csp": "^3.4.0",
     "hpp": "^0.2.3",
     "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.1",
@@ -42,6 +43,7 @@
     "pug": "^3.0.2",
     "sharp": "^0.32.6",
     "slugify": "^1.6.6",
+    "stripe": "^13.8.0",
     "validator": "^13.9.0",
     "xss-clean": "^0.1.4"
   },
