--- a/package.json
+++ b/package.json
@@ -5,12 +5,8 @@
   "description": "app that uses node, express, and mongoDB",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon server.js",
-    "start:prod": "SET NODE_ENV=production&& nodemon server.js",
-    "debug": "ndb server.js",
-    "watch": "webpack serve",
-    "build": "webpack",
-    "stats": "STATS=server npm run build"
+    "start": "webpack serve --open --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js"
   },
   "repository": {
     "type": "git",
@@ -36,11 +32,13 @@
     "helmet-csp": "^3.4.0",
     "hpp": "^0.2.3",
     "html-to-text": "^9.0.5",
+    "html-webpack-plugin": "^5.6.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.1",
     "mongoose-unique-validator": "^4.0.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-polyfill-webpack-plugin": "^3.0.0",
     "nodemailer": "^6.9.4",
     "nodemailer-brevo-transport": "^2.0.1",
     "pug": "^3.0.2",
@@ -49,10 +47,12 @@
     "stripe": "^13.8.0",
     "url": "^0.11.3",
     "validator": "^13.9.0",
+    "webpack-merge": "^5.10.0",
     "xss-clean": "^0.1.4"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
+    "css-loader": "^6.10.0",
     "eslint": "^8.43.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.8.0",
@@ -61,8 +61,10 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
+    "html-webpack-pug-plugin": "^4.0.0",
     "ndb": "^1.1.5",
     "prettier": "^2.8.8",
+    "pug-plugin": "^4.9.9",
     "webpack": "^5.89.0",
     "webpack-bundle-analyzer": "^4.9.1",
     "webpack-cli": "^5.1.4",
