--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
     "consistent-return": "off",
     "endOfLine": 0, // 0 = off, 1 = warn, 2 = error
     "func-names": "off",
+    "import/extensions": 0, // 0 = off, 1 = warn, 2 = error
     "no-console": "off",
     "no-param-reassign": "off",
     "no-process-exit": "off",
